--- a/services/blog/kubernetes/service.yaml
+++ b/services/blog/kubernetes/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: accounts-service
+  name: blog-service
   labels:
-    app: accounts-service
+    app: blog-service
 spec:
   type: NodePort
   ports:
@@ -11,6 +11,6 @@ spec:
       protocol: TCP
       port: 8000
       targetPort: 8000
-      nodePort: 30000
+      nodePort: 30001  # Different from accounts service which uses 30000
   selector:
-    app: accounts-service
+    app: blog-service
