setting up blog and accounts without minikube

--- a/services/blog/Dockerfile
+++ b/services/blog/Dockerfile
@@ -21,8 +21,8 @@ RUN poetry config virtualenvs.create false
 RUN poetry install --only=main
 
 # Copy application code
-COPY services/accounts/ .
+COPY services/blog/ .
 
-EXPOSE 8001
+EXPOSE 8002
 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8001"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8002"]
