--- a/gateway/Dockerfile
+++ b/gateway/Dockerfile
@@ -5,7 +5,6 @@ WORKDIR /app
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
     gcc \
-    libpq-dev \
     && rm -rf /var/lib/apt/lists/*
 
 # Install Poetry
@@ -21,8 +20,8 @@ RUN poetry config virtualenvs.create false
 RUN poetry install --only=main
 
 # Copy application code
-COPY services/accounts/ .
+COPY gateway/ .
 
-EXPOSE 8001
+EXPOSE 8000
 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8001"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
