--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ uvicorn = {extras = ["standard"], version = "^0.24.0"}
 sqlalchemy = "^2.0.23"
 psycopg2-binary = "^2.9.9"
 alembic = "^1.12.1"
-pydantic = "^2.5.0"
+pydantic = {extras = ["email"], version = "^2.5.0"}
 pydantic-settings = "^2.1.0"
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
