--- a/services/accounts/Dockerfile
+++ b/services/accounts/Dockerfile
@@ -18,11 +18,16 @@ COPY pyproject.toml poetry.lock* ./
 RUN poetry config virtualenvs.create false
 
 # Install dependencies
-RUN poetry install --only=main
+RUN poetry install
 
 # Copy application code
-COPY services/accounts/ .
+COPY services/accounts/ ./src/
+
+# Set Python path
+ENV PYTHONPATH=/app/src
+
+WORKDIR /app/src
 
 EXPOSE 8001
 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8001"]
+CMD ["poetry", "run", "uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8001", "--reload"]
