--- a/k8s/kind-config.yaml
+++ b/k8s/kind-config.yaml
@@ -11,13 +11,19 @@ nodes:
         node-labels: "ingress-ready=true"
   extraPortMappings:
   - containerPort: 80
-    hostPort: 80
+    hostPort: 8080
     protocol: TCP
   - containerPort: 443
-    hostPort: 443
+    hostPort: 8443
     protocol: TCP
-  - containerPort: 8000
-    hostPort: 8000
+  - containerPort: 30000
+    hostPort: 30000
+    protocol: TCP
+  - containerPort: 30001
+    hostPort: 30001
+    protocol: TCP
+  - containerPort: 30002
+    hostPort: 30002
     protocol: TCP
 - role: worker
 - role: worker
