--- a/k8s/dev/api-gateway.yaml
+++ b/k8s/dev/api-gateway.yaml
@@ -38,6 +38,13 @@ spec:
             port: 8000
           initialDelaySeconds: 5
           periodSeconds: 5
+        resources:
+          requests:
+            memory: "128Mi"
+            cpu: "100m"
+          limits:
+            memory: "512Mi"
+            cpu: "500m"
 
 ---
 apiVersion: v1
