--- a/k8s/dev/redis.yaml
+++ b/k8s/dev/redis.yaml
@@ -21,6 +21,27 @@ spec:
         volumeMounts:
         - name: redis-storage
           mountPath: /data
+        livenessProbe:
+          exec:
+            command:
+            - redis-cli
+            - ping
+          initialDelaySeconds: 30
+          periodSeconds: 10
+        readinessProbe:
+          exec:
+            command:
+            - redis-cli
+            - ping
+          initialDelaySeconds: 5
+          periodSeconds: 5
+        resources:
+          requests:
+            memory: "128Mi"
+            cpu: "100m"
+          limits:
+            memory: "256Mi"
+            cpu: "500m"
       volumes:
       - name: redis-storage
         persistentVolumeClaim:
